# fastapi_clean

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test_and_lint.yaml
__tests__/repositories/: test_AuthorRepository.py  test_BookRepository.py  test_author_repository.py  test_book_repository.py
__tests__/routers/: test_author_router.py
__tests__/services/: __init__.py  test_AuthorService.py  test_BookService.py  test_author_service.py  test_books_service.py
configs/: Database.py  GraphQL.py  database.py  environment.py  graphql.py  middleware.py
metadata/: tags.py
models/: AuthorModel.py  BaseModel.py  BookAuthorAssociation.py  BookModel.py  author_model.py  base_model.py  book_author_association.py  book_model.py
repositories/: AuthorRepository.py  BookRepository.py  __init__.py  author_repository.py  book_repository.py
routers/v1/: AuthorRouter.py  BookRouter.py  author_router.py  book_router.py
schemas/graphql/: Author.py  Mutation.py  Query.py  author.py  mutation.py  query.py
services/: AuthorService.py  BookService.py  __init__.py  author_service.py  book_service.py
